# llmoptimization

./: .gitignore  CONTRIBUTING.md  Demo.py  LICENSE  Oops.py  README (1).md  README.md  README_DESKTOP.md  Ui.js  ]  __init__ (2).py  __init__.py  __main__.py  coderabbit.yml  cost (1).py  cost.py  create_repo.ps1  gitignore (1)  index.html  launch-win.bat  main.js  package-lock.json  package.json  preload.js  pull_request_template.md  pyproject (1).toml  pyproject.toml  test_cost (1).py  test_cost.py  test_text_stats (2).py  test_text_stats.py  text_stats (1).py  text_stats (2).py  text_stats.py
.github/workflows/: gptreview-lite.yml  gptreview-wide.yml.
tests/: test_cli_import_only.py  test_cost_estimate.py  test_main.py  test_text_stats_split_into_chunks.py
