[project]
name = "efmcalc"
version = "0.1.0"
description = "Naive token & price estimator with simple text chunking."
authors = [{name="Arseny Perel"}]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
